<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:visibility="gone"
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:ellipsize="end"
            android:layout_gravity="center"
            tools:text="Проверьте подключение к интернету"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="visible"
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="19dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp"/>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/textBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_tags="ratingTag, yearTag, countryTag, genreTag, screenwriterTag, actorsTag"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                tools:text="The Lord of the Rings: The Fellowship of the Ring"/>

            <TextView
                android:id="@+id/rating"
                app:layout_constraintTag="ratingTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:ellipsize="end"
                android:gravity="center_vertical|start"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintWidth_min="124dp"
                app:layout_constraintWidth_max="150dp"
                app:layout_constrainedWidth="true"
                android:textSize="16sp"
                android:text="@string/app_rating"/>

            <TextView
                android:id="@+id/ratingValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:gravity="center_vertical|start"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/rating"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="8.8"/>

            <TextView
                android:id="@+id/year"
                app:layout_constraintTag="yearTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:gravity="center_vertical|start"
                app:layout_constraintTop_toBottomOf="@id/ratingValue"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintWidth_min="124dp"
                app:layout_constraintWidth_max="150dp"
                app:layout_constrainedWidth="true"
                android:textSize="16sp"
                android:text="@string/app_year"/>

            <TextView
                android:id="@+id/yearValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:gravity="center_vertical|start"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/year"
                app:layout_constraintTop_toBottomOf="@id/ratingValue"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="2001"/>

            <TextView
                android:id="@+id/country"
                app:layout_constraintTag="countryTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:ellipsize="end"
                android:gravity="center_vertical|start"
                app:layout_constraintTop_toBottomOf="@id/yearValue"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintWidth_min="124dp"
                app:layout_constraintWidth_max="150dp"
                app:layout_constrainedWidth="true"
                android:textSize="16sp"
                android:text="@string/app_country"/>

            <TextView
                android:id="@+id/countryValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:gravity="center_vertical|start"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/country"
                app:layout_constraintTop_toBottomOf="@id/yearValue"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="New Zealand, USA"/>

            <TextView
                android:id="@+id/genre"
                app:layout_constraintTag="genreTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:gravity="center_vertical|start"
                app:layout_constraintTop_toBottomOf="@id/countryValue"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintWidth_min="124dp"
                app:layout_constraintWidth_max="150dp"
                app:layout_constrainedWidth="true"
                android:textSize="16sp"
                android:text="@string/app_genre"/>

            <TextView
                android:id="@+id/genreValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:gravity="center_vertical|start"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/genre"
                app:layout_constraintTop_toBottomOf="@id/countryValue"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Action, Adventure, Drama"/>

            <TextView
                android:id="@+id/direction"
                app:layout_constraintTag="directionTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:ellipsize="end"
                android:gravity="center_vertical|start"
                app:layout_constraintTop_toBottomOf="@id/genreValue"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintWidth_min="124dp"
                app:layout_constraintWidth_max="150dp"
                app:layout_constrainedWidth="true"
                android:textSize="16sp"
                android:text="@string/app_direction"/>

            <TextView
                android:id="@+id/directionValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:gravity="center_vertical|start"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/direction"
                app:layout_constraintTop_toBottomOf="@id/genreValue"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Peter Jackson"/>

            <TextView
                android:id="@+id/writer"
                app:layout_constraintTag="writerTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:ellipsize="end"
                android:gravity="center_vertical|start"
                app:layout_constraintTop_toBottomOf="@id/directionValue"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintWidth_min="124dp"
                app:layout_constraintWidth_max="150dp"
                app:layout_constrainedWidth="true"
                android:textSize="16sp"
                android:text="@string/app_writer"/>

            <TextView
                android:id="@+id/writerValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:gravity="center_vertical|start"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/writer"
                app:layout_constraintTop_toBottomOf="@id/directionValue"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="J.R.R. Tolkien, Fran Walsh, Philippa Boyens"/>



            <TextView
                android:id="@+id/actors"
                app:layout_constraintTag="actorsTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:ellipsize="end"
                android:gravity="center_vertical|start"
                app:layout_constraintTop_toBottomOf="@id/writerValue"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintWidth_min="124dp"
                app:layout_constraintWidth_max="150dp"
                app:layout_constrainedWidth="true"
                android:textSize="16sp"
                android:text="@string/app_actors"/>

            <TextView
                android:id="@+id/actorsValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:gravity="center_vertical|start"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/actors"
                app:layout_constraintTop_toBottomOf="@id/writerValue"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Elijah Wood, Ian McKellen, Orlando Bloom"/>


            <TextView
                android:id="@+id/plot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:gravity="center_vertical|start"
                app:layout_constrainedWidth="true"
                app:layout_constraintTop_toBottomOf="@id/actorsValue"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/app_plot"/>

            <TextView
                android:id="@+id/plotValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constrainedWidth="true"
                app:layout_constraintTop_toBottomOf="@+id/plot"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                android:textSize="16sp"
                tools:text="Тихая деревня, где живут хоббиты. Придя на 111-й день рождения к своему старому другу Бильбо Бэггинсу, волшебник Гэндальф начинает вести разговор о кольце, которое Бильбо нашел много лет назад. Это кольцо принадлежало когда-то темному властителю Средиземья Саурону, и оно дает большую власть своему обладателю. Теперь Саурон хочет вернуть себе власть над Средиземьем. Бильбо отдает Кольцо племяннику Фродо, чтобы тот отнёс его к Роковой Горе и уничтожил." />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/showCastBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_show_cast_btn"
            android:layout_margin="19dp"/>

    </LinearLayout>

</ScrollView>
